k3s/manifests/minio/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio
          args:
            - server
            - --console-address
            - ":9001"
            - /export
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: console
              containerPort: 9001
              protocol: TCP
          volumeMounts:
            - name: datadir
              mountPath: /export
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: minio-datadir
